Hw2 almost done, jsut add more secure tests and Javadoc